<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.AgendaActivity">

    <include
        android:id="@+id/include"
        layout="@layout/toolbar" />

    <TextView
        android:id="@+id/tvItemName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_16_dp"
        android:text="@string/textview_name"
        android:textSize="@dimen/font_16_sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include" />

    <EditText
        android:id="@+id/editName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16_dp"
        android:layout_marginEnd="@dimen/margin_16_dp"
        android:autofillHints="text"
        android:hint="@string/textview_hint_name"
        android:inputType="text"
        android:minHeight="@dimen/height_48_dp"
        app:layout_constraintEnd_toEndOf="@id/tvItemName"
        app:layout_constraintStart_toStartOf="@id/tvItemName"
        app:layout_constraintTop_toBottomOf="@id/tvItemName" />

    <TextView
        android:id="@+id/tvItemPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textview_phone"
        android:textSize="@dimen/font_16_sp"
        android:layout_margin="@dimen/margin_16_dp"
        app:layout_constraintEnd_toEndOf="@id/editName"
        app:layout_constraintStart_toStartOf="@id/editName"
        app:layout_constraintTop_toBottomOf="@id/editName" />

    <EditText
        android:id="@+id/editPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16_dp"
        android:layout_marginEnd="@dimen/margin_16_dp"
        android:autofillHints="phone"
        android:hint="@string/textview_hint_phone"
        android:inputType="phone"
        android:minHeight="@dimen/height_48_dp"
        app:layout_constraintEnd_toEndOf="@id/tvItemPhone"
        app:layout_constraintStart_toStartOf="@id/tvItemPhone"
        app:layout_constraintTop_toBottomOf="@id/tvItemPhone" />

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_16_dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/lilas_03"
        android:text="@string/button_adicionar"
        android:textAllCaps="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnEdit"
        app:layout_constraintTop_toBottomOf="@id/editPhone" />

    <Button
        android:id="@+id/btnEdit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/lilas_03"
        android:text="@string/button_editar"
        android:textAllCaps="false"
        app:layout_constraintStart_toEndOf="@id/btnAdd"
        app:layout_constraintEnd_toStartOf="@id/btnConsult"
        app:layout_constraintTop_toTopOf="@id/btnAdd" />

    <Button
        android:id="@+id/btnConsult"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/lilas_03"
        android:text="@string/button_consultar"
        android:textAllCaps="false"
        android:layout_marginEnd="@dimen/margin_16_dp"
        android:layout_marginStart="@dimen/margin_16_dp"
        app:layout_constraintStart_toEndOf="@id/btnEdit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/btnEdit" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycleView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="@dimen/margin_16_dp"
        app:layout_constraintTop_toBottomOf="@id/btnConsult"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:itemCount="4"
        tools:listitem="@layout/items_contact_agend"/>

</androidx.constraintlayout.widget.ConstraintLayout>